--- a/dashboard/css/custom.css
+++ b/dashboard/css/custom.css
@@ -9,3 +9,6 @@ ul.nav a {
     background-color: rgba(34, 34, 34, 0.75);
     border-color: #080808;
 }
+.col-sm-3.col-lg-5.widget-left .fa{
+    font-size: 45px;
+}
